[gd_scene load_steps=35 format=2]

[ext_resource path="res://Menus/font_medium.tres" type="DynamicFont" id=1]
[ext_resource path="res://Menus/font_large.tres" type="DynamicFont" id=2]
[ext_resource path="res://Menus/font_small.tres" type="DynamicFont" id=3]
[ext_resource path="res://Menus/GWJ-18-WC-3.png" type="Texture" id=4]
[ext_resource path="res://Menus/GWJ-18-WC-1.png" type="Texture" id=5]
[ext_resource path="res://Menus/GWJ-18-WC-2.png" type="Texture" id=6]
[ext_resource path="res://Menus/head_bg_less.png" type="Texture" id=7]
[ext_resource path="res://Player/spritesheet.png" type="Texture" id=8]
[ext_resource path="res://Items/PlayerSpawner/spritesheet.png" type="Texture" id=9]
[ext_resource path="res://Menus/Intro.gd" type="Script" id=10]
[ext_resource path="res://Enemies/Darklord/spritesheet.png" type="Texture" id=11]
[ext_resource path="res://Menus/press_key.wav" type="AudioStream" id=12]
[ext_resource path="res://Menus/welcome_to_the_plague.wav" type="AudioStream" id=13]
[ext_resource path="res://Menus/Buttons/PS4_Circle.png" type="Texture" id=14]
[ext_resource path="res://Menus/Buttons/PS4_Cross.png" type="Texture" id=15]
[ext_resource path="res://Menus/Buttons/PS4_Dpad.png" type="Texture" id=16]
[ext_resource path="res://Menus/Buttons/PS4_Square.png" type="Texture" id=17]
[ext_resource path="res://Menus/Buttons/PS4_Triangle.png" type="Texture" id=18]
[ext_resource path="res://Menus/Buttons/XboxOne_B.png" type="Texture" id=19]
[ext_resource path="res://Menus/Buttons/XboxOne_Dpad.png" type="Texture" id=20]
[ext_resource path="res://Menus/Buttons/XboxOne_X.png" type="Texture" id=21]
[ext_resource path="res://Menus/Buttons/XboxOne_Y.png" type="Texture" id=22]
[ext_resource path="res://Menus/Buttons/XboxOne_A.png" type="Texture" id=23]
[ext_resource path="res://Menus/Buttons/Keyboard_Black_Arrow_Left.png" type="Texture" id=24]
[ext_resource path="res://Menus/Buttons/Keyboard_Black_Z.png" type="Texture" id=25]
[ext_resource path="res://Menus/Buttons/Keyboard_Black_X.png" type="Texture" id=26]
[ext_resource path="res://Menus/Buttons/Keyboard_Black_Shift.png" type="Texture" id=27]
[ext_resource path="res://Menus/Buttons/Keyboard_Black_Arrow_Up.png" type="Texture" id=28]
[ext_resource path="res://Menus/Buttons/Keyboard_Black_Arrow_Right.png" type="Texture" id=29]

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 80, 81, 82, 83 ]
}

[sub_resource type="Animation" id=2]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("UI/PressKey:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ) ]
}

[sub_resource type="Animation" id=5]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("WildJamHead:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.9, 2.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.156863 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Wildcards:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.2, 2.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UI/Title:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -144 ), Vector2( 0, -144 ), Vector2( 0, 208 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("UI/PressKey:rect_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2.4, 2.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("UI/Credits:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.6, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 720 ), Vector2( 0, 720 ), Vector2( 0, 672 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("GameScene:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "method"
tracks/6/path = NodePath("Welcome")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("UI/Controls:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1.6, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Intro" type="Node2D"]
script = ExtResource( 10 )

[node name="WildJamHead" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.156863 )
position = Vector2( 248, 336 )
scale = Vector2( 0.628448, 0.628448 )
texture = ExtResource( 7 )
flip_h = true

[node name="UI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="UI"]
margin_top = 208.0
margin_right = 1280.0
margin_bottom = 352.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Plague"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PressKey" type="Label" parent="UI"]
margin_top = 328.0
margin_right = 1280.0
margin_bottom = 472.0
rect_pivot_offset = Vector2( 640, 80 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Press any button to play"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Label" parent="UI"]
margin_top = 672.0
margin_right = 1280.0
margin_bottom = 720.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Developed by David Saltares and Jay Cano for Godot Wild Jam #18"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Control" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Keyboard" type="Label" parent="UI/Controls"]
margin_left = 610.771
margin_top = 487.394
margin_right = 1242.77
margin_bottom = 604.394
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "to move
to jump
to attack
to shoot
to Dash"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Keys" type="Node2D" parent="UI/Controls/Keyboard"]
scale = Vector2( 0.25, 0.25 )

[node name="Shift" type="Sprite" parent="UI/Controls/Keyboard/Keys"]
position = Vector2( -65, 426.763 )
texture = ExtResource( 27 )

[node name="Up" type="Sprite" parent="UI/Controls/Keyboard/Keys"]
position = Vector2( -65, 138.885 )
texture = ExtResource( 28 )

[node name="Right" type="Sprite" parent="UI/Controls/Keyboard/Keys"]
position = Vector2( -65, 41.363 )
texture = ExtResource( 29 )

[node name="Left" type="Sprite" parent="UI/Controls/Keyboard/Keys"]
position = Vector2( -149.332, 41.363 )
texture = ExtResource( 24 )

[node name="Z" type="Sprite" parent="UI/Controls/Keyboard/Keys"]
position = Vector2( -65, 330.466 )
texture = ExtResource( 25 )

[node name="X" type="Sprite" parent="UI/Controls/Keyboard/Keys"]
position = Vector2( -65, 234.209 )
texture = ExtResource( 26 )

[node name="Gamepad" type="Label" parent="UI/Controls"]
visible = false
margin_left = 610.771
margin_top = 487.394
margin_right = 1242.77
margin_bottom = 604.394
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "to move
to jump
to attack
to shoot
to Dash"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PS4" type="Node2D" parent="UI/Controls/Gamepad"]
visible = false
scale = Vector2( 0.25, 0.25 )

[node name="PS4_Triangle" type="Sprite" parent="UI/Controls/Gamepad/PS4"]
position = Vector2( -65, 426.763 )
texture = ExtResource( 18 )

[node name="PS4_Cross" type="Sprite" parent="UI/Controls/Gamepad/PS4"]
position = Vector2( -65, 138.885 )
texture = ExtResource( 15 )

[node name="PS4_Dpad" type="Sprite" parent="UI/Controls/Gamepad/PS4"]
position = Vector2( -65, 41.363 )
texture = ExtResource( 16 )

[node name="PS4_Square" type="Sprite" parent="UI/Controls/Gamepad/PS4"]
position = Vector2( -65, 330.466 )
texture = ExtResource( 17 )

[node name="PS4_Circle" type="Sprite" parent="UI/Controls/Gamepad/PS4"]
position = Vector2( -65, 234.209 )
texture = ExtResource( 14 )

[node name="XBOX" type="Node2D" parent="UI/Controls/Gamepad"]
visible = false
scale = Vector2( 0.25, 0.25 )

[node name="Xbox_Y" type="Sprite" parent="UI/Controls/Gamepad/XBOX"]
position = Vector2( -65, 426.763 )
texture = ExtResource( 22 )

[node name="Xbox_A" type="Sprite" parent="UI/Controls/Gamepad/XBOX"]
position = Vector2( -65, 138.885 )
texture = ExtResource( 23 )

[node name="Xbox_Dpad" type="Sprite" parent="UI/Controls/Gamepad/XBOX"]
position = Vector2( -65, 41.363 )
texture = ExtResource( 20 )

[node name="Xbox_X" type="Sprite" parent="UI/Controls/Gamepad/XBOX"]
position = Vector2( -65, 330.466 )
texture = ExtResource( 21 )

[node name="XBox_B" type="Sprite" parent="UI/Controls/Gamepad/XBOX"]
position = Vector2( -65, 234.209 )
texture = ExtResource( 19 )

[node name="Wildcards" type="Node2D" parent="."]
position = Vector2( 1024, 72 )
scale = Vector2( 0.1, 0.1 )

[node name="80s" type="Sprite" parent="Wildcards"]
texture = ExtResource( 5 )

[node name="Chance" type="Sprite" parent="Wildcards"]
position = Vector2( 1008, -0.450012 )
texture = ExtResource( 6 )

[node name="Rain" type="Sprite" parent="Wildcards"]
position = Vector2( 2024, 0 )
texture = ExtResource( 4 )

[node name="GameScene" type="Node2D" parent="."]
scale = Vector2( 6, 6 )

[node name="Skull" type="Node2D" parent="GameScene"]
position = Vector2( 24, 77.3333 )

[node name="Sprite" type="Sprite" parent="GameScene/Skull"]
texture = ExtResource( 9 )
vframes = 5
hframes = 40
frame = 82

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameScene/Skull"]
anims/idle = SubResource( 1 )

[node name="Player" type="Node2D" parent="GameScene"]
position = Vector2( 36, 70.6667 )

[node name="Sprite" type="Sprite" parent="GameScene/Player"]
texture = ExtResource( 8 )
vframes = 10
hframes = 8
frame = 23

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameScene/Player"]
anims/idle = SubResource( 2 )

[node name="Darklord" type="Node2D" parent="GameScene"]

[node name="Sprite" type="Sprite" parent="GameScene/Darklord"]
position = Vector2( 185.333, 74.6667 )
texture = ExtResource( 11 )
flip_h = true
vframes = 4
hframes = 16
frame = 32

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameScene/Darklord"]
anims/idle = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "intro"
anims/idle = SubResource( 4 )
anims/intro = SubResource( 5 )

[node name="PressKey" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="Welcome" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = 11.063
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
